--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
-streamlit
-scikit-learn
-pandas
-joblib
-requests
+# requirements.txt
+streamlit==1.28.0
+pandas==2.0.3
+numpy==1.24.3
+scikit-learn==1.3.0
+joblib==1.3.2
+google-generativeai==0.3.0
+plotly==5.15.0
+seaborn==0.12.2
+matplotlib==3.7.2
